[package]
name = "changeablerevproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
axum-extra = { version = "0.9.0", features = ["typed-header"] }
chrono = "0.4.34"
serde = { version = "1.0.197", features = ["derive"] }
clap = { version = "4.5.1", features = ["derive"] }
rand = "0.8.5"
anyhow = "1.0.80"
